dummy/dummy-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dummy
  name: dummy
  labels:
    app: dummy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dummy
  template:
    metadata:
      labels:
        app: dummy
    spec:
      containers:
      - name: dummmy
        image: vvang/dummy:0.2
        ports:
        - containerPort: 80
