dummy/dummy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dummy
  name: dummy
spec:
  selector:
    app: dummy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
