dummy/dummy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dummy
  name: dummy
spec:
  rules:
  - host: "dummy.borg1.bwlab"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dummy
            port:
              number: 80
